# libcrunch

./: .gitignore  .gitmodules  Makefile.am  config.h.in  config.mk.in  configure.ac
contrib/: Makefile
src/: Makefile
